Data/Logs/log-2020-07-20.txt


=============================================================
Время: 2020-07-20 11:29:07.682887

Ошибка:
Traceback (most recent call last):
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 596, in _load_from_module_spec
    spec.loader.exec_module(lib)
  File "<frozen importlib._bootstrap_external>", line 779, in exec_module
  File "<frozen importlib._bootstrap_external>", line 916, in get_code
  File "<frozen importlib._bootstrap_external>", line 846, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "E:\PyProg\ProstoTools(Original version)\Cogs\moderate.py", line 893
    data.update('warns': warns)
                       ^
SyntaxError: invalid syntax

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "bot.py", line 75, in <module>
    client.load_extension(f'Cogs.{filename[:-3]}')
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 653, in load_extension
    self._load_from_module_spec(spec, name)
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 599, in _load_from_module_spec
    raise errors.ExtensionFailed(key, e) from e
discord.ext.commands.errors.ExtensionFailed: Extension 'Cogs.moderate' raised an error: SyntaxError: invalid syntax (moderate.py, line 893)

=============================================================

=============================================================
Время: 2020-07-20 12:18:23.587356

Ошибка:
Command raised an exception: UnidentifiedImageError: cannot identify image file <_io.BytesIO object at 0x06572DE8>
=============================================================

=============================================================
Время: 2020-07-20 12:36:44.116344

Ошибка:
Command raised an exception: AttributeError: '_io.BytesIO' object has no attribute 'convert'
=============================================================

=============================================================
Время: 2020-07-20 12:37:45.283109

Ошибка:
Command raised an exception: ValueError: bad mode 1
=============================================================

=============================================================
Время: 2020-07-20 12:39:33.131646

Ошибка:
Command raised an exception: ValueError: bad mode 1
=============================================================